@@ -31,3 +31,4 @@ WooHyun Jung (woohyun) <woohyun0705@gmail.com>
 Guilherme Silveira <xguiga@gmail.com>
 Flavio Ceolin <flavio.ceolin@profusion.mobi>
 Daniel Zaoui <daniel.zaoui@yahoo.com>
+Daniel Willmann <d.willmann@samsung.com>
